--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -86,7 +86,7 @@
 <footer id="contact" class="footer reveal">
   <h2>Get in Touch</h2>
   <p>Email: georgeignatius6@gmail.com</p>
-  <p>GitHub: github.com/yourusername</p>
+  <p>GitHub: github.com/george-ignatius</p>
   <p>Blog: george-devops.blogspot.com</p>
 </footer>
 
