--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>George Ignatius | DevOps Engineer</title>
 
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <!-- Professional Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
 </head>
@@ -17,8 +17,9 @@
   <nav class="nav">
     <div class="logo">George Ignatius</div>
     <ul class="nav-links">
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
+      <li><a href="#overview">Overview</a></li>
+      <li><a href="#expertise">Expertise</a></li>
+      <li><a href="#work">Work</a></li>
       <li><a href="#experience">Experience</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
@@ -26,57 +27,107 @@
 
   <div class="hero">
     <h1>DevOps Engineer</h1>
-    <p>AWS • GCP • Kubernetes • CI/CD • Automation</p>
-    <a href="#projects" class="btn-primary">Explore Work</a>
+    <p>
+      Designing, automating, and operating secure cloud platforms
+      across AWS and GCP with a strong focus on reliability and scale.
+    </p>
+    <a href="#work" class="btn-primary">View Professional Work</a>
   </div>
 </header>
 
-<!-- ================= SKILLS ================= -->
-<section id="skills" class="section reveal">
-  <h2>Core Expertise</h2>
-  <div class="grid">
-    <div class="card">☁ Cloud Platforms<br><span>AWS & GCP</span></div>
-    <div class="card">🐳 Containers<br><span>Docker & Kubernetes</span></div>
-    <div class="card">🔁 CI/CD<br><span>Jenkins & GitHub Actions</span></div>
-    <div class="card">📊 Monitoring<br><span>Prometheus & Grafana</span></div>
-    <div class="card">🧩 IaC<br><span>Terraform & Ansible</span></div>
-    <div class="card">🐧 Linux<br><span>Bash & Python</span></div>
+<!-- ================= OVERVIEW ================= -->
+<section id="overview" class="section reveal">
+  <div class="content-center">
+    <h2>Professional Overview</h2>
+    <p class="lead">
+      DevOps Engineer with hands-on experience in cloud infrastructure,
+      CI/CD automation, container orchestration, and observability.
+      Proven ability to improve deployment efficiency, reliability,
+      and operational visibility in production environments.
+    </p>
   </div>
 </section>
 
-<!-- ================= PROJECTS ================= -->
-<section id="projects" class="section dark reveal">
-  <h2>Featured Projects</h2>
+<!-- ================= EXPERTISE ================= -->
+<section id="expertise" class="section reveal">
+  <h2>Areas of Expertise</h2>
+
+  <div class="grid">
+    <div class="card">
+      <h3>Cloud Platforms</h3>
+      <p>AWS and Google Cloud Platform with cost awareness and security best practices.</p>
+    </div>
+
+    <div class="card">
+      <h3>Containers & Orchestration</h3>
+      <p>Dockerized workloads and Kubernetes deployments on GKE and EKS.</p>
+    </div>
+
+    <div class="card">
+      <h3>CI/CD & Automation</h3>
+      <p>Jenkins and GitHub Actions pipelines with automated builds and releases.</p>
+    </div>
+
+    <div class="card">
+      <h3>Observability</h3>
+      <p>Prometheus, Grafana, CloudWatch, and alerting integrations.</p>
+    </div>
+
+    <div class="card">
+      <h3>Infrastructure as Code</h3>
+      <p>Terraform and Ansible for consistent, repeatable environments.</p>
+    </div>
+
+    <div class="card">
+      <h3>Linux & Scripting</h3>
+      <p>Bash and Python automation on Linux-based systems.</p>
+    </div>
+  </div>
+</section>
+
+<!-- ================= WORK ================= -->
+<section id="work" class="section dark reveal">
+  <h2>Selected Professional Work</h2>
 
   <div class="grid">
     <div class="accenture-card">
       <h3>Kubernetes Production Platform</h3>
-      <p>Designed and managed GKE & EKS clusters with ingress, autoscaling, and monitoring.</p>
+      <p>
+        Designed and operated production Kubernetes clusters with ingress,
+        autoscaling, monitoring, and log aggregation.
+      </p>
     </div>
 
     <div class="accenture-card">
-      <h3>CI/CD Automation</h3>
-      <p>Jenkins & GitHub Actions pipelines with Docker multi-stage builds and rollback strategy.</p>
+      <h3>CI/CD Pipeline Optimization</h3>
+      <p>
+        Implemented CI/CD pipelines that reduced deployment time
+        and improved release reliability.
+      </p>
     </div>
 
     <div class="accenture-card">
-      <h3>Monitoring & Alerting</h3>
-      <p>CloudWatch, Prometheus, Grafana dashboards with SNS & Google Chat alerts.</p>
+      <h3>Monitoring & Alerting Framework</h3>
+      <p>
+        Built observability solutions using Prometheus, Grafana,
+        and CloudWatch with proactive alerting.
+      </p>
     </div>
   </div>
 </section>
 
 <!-- ================= EXPERIENCE ================= -->
 <section id="experience" class="section reveal">
-  <h2>Experience</h2>
+  <h2>Professional Experience</h2>
 
   <div class="timeline">
     <div class="timeline-item">
-      <span>2022 – Present</span>
+      <span>Feb 2022 – Present</span>
       <h3>DevOps Engineer – Profit Apps India Pvt Ltd</h3>
       <p>
-        Optimized deployments, automated infrastructure, implemented observability,
-        and reduced deployment time by 10 minutes.
+        Responsible for cloud infrastructure operations, CI/CD automation,
+        Kubernetes deployments, monitoring, and production support.
+        Improved deployment efficiency and system observability.
       </p>
     </div>
   </div>
@@ -84,7 +135,7 @@
 
 <!-- ================= CONTACT ================= -->
 <footer id="contact" class="footer reveal">
-  <h2>Get in Touch</h2>
+  <h2>Contact Information</h2>
   <p>Email: georgeignatius6@gmail.com</p>
   <p>GitHub: github.com/george-ignatius</p>
   <p>Blog: george-devops.blogspot.com</p>
