--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,15 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>George Ignatius | DevOps Engineer</title>
 
-  <!-- Professional Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- ================= HEADER ================= -->
-<header class="header">
+<!-- HEADER -->
+<header class="header slide-down">
   <nav class="nav">
     <div class="logo">George Ignatius</div>
     <ul class="nav-links">
@@ -25,119 +23,81 @@
     </ul>
   </nav>
 
-  <div class="hero">
+  <div class="hero slide-left">
     <h1>DevOps Engineer</h1>
     <p>
-      Designing, automating, and operating secure cloud platforms
-      across AWS and GCP with a strong focus on reliability and scale.
+      Building reliable, scalable and secure cloud platforms
+      across AWS and Google Cloud.
     </p>
-    <a href="#work" class="btn-primary">View Professional Work</a>
+    <a href="#work" class="btn-primary">View Work</a>
   </div>
 </header>
 
-<!-- ================= OVERVIEW ================= -->
-<section id="overview" class="section reveal">
-  <div class="content-center">
-    <h2>Professional Overview</h2>
-    <p class="lead">
-      DevOps Engineer with hands-on experience in cloud infrastructure,
-      CI/CD automation, container orchestration, and observability.
-      Proven ability to improve deployment efficiency, reliability,
-      and operational visibility in production environments.
+<!-- OVERVIEW -->
+<section id="overview" class="section slide-right">
+  <h2>Professional Overview</h2>
+  <p class="lead">
+    DevOps Engineer with strong experience in cloud infrastructure,
+    CI/CD automation, Kubernetes operations and monitoring systems
+    in production environments.
+  </p>
+</section>
+
+<!-- EXPERTISE -->
+<section id="expertise" class="section slide-left">
+  <h2>Areas of Expertise</h2>
+
+  <div class="grid">
+    <div class="card">Cloud Platforms<br><span>AWS & GCP</span></div>
+    <div class="card">Containers<br><span>Docker & Kubernetes</span></div>
+    <div class="card">CI/CD<br><span>Jenkins & GitHub Actions</span></div>
+    <div class="card">Monitoring<br><span>Prometheus & Grafana</span></div>
+    <div class="card">IaC<br><span>Terraform & Ansible</span></div>
+    <div class="card">Linux & Scripting<br><span>Bash & Python</span></div>
+  </div>
+</section>
+
+<!-- WORK -->
+<section id="work" class="section dark slide-right">
+  <h2>Selected Work</h2>
+
+  <div class="grid">
+    <div class="accent-card">
+      <h3>Kubernetes Production Platform</h3>
+      <p>GKE & EKS clusters with ingress, autoscaling and observability.</p>
+    </div>
+
+    <div class="accent-card">
+      <h3>CI/CD Pipeline Optimization</h3>
+      <p>Automated build and release pipelines reducing deployment time.</p>
+    </div>
+
+    <div class="accent-card">
+      <h3>Monitoring & Alerting</h3>
+      <p>Centralized metrics, logs and alerts for production workloads.</p>
+    </div>
+  </div>
+</section>
+
+<!-- EXPERIENCE -->
+<section id="experience" class="section slide-left">
+  <h2>Professional Experience</h2>
+
+  <div class="timeline">
+    <span>Feb 2022 – Present</span>
+    <h3>DevOps Engineer – Profit Apps India Pvt Ltd</h3>
+    <p>
+      Managing cloud infrastructure, Kubernetes deployments,
+      CI/CD automation, monitoring and production support.
     </p>
   </div>
 </section>
 
-<!-- ================= EXPERTISE ================= -->
-<section id="expertise" class="section reveal">
-  <h2>Areas of Expertise</h2>
-
-  <div class="grid">
-    <div class="card">
-      <h3>Cloud Platforms</h3>
-      <p>AWS and Google Cloud Platform with cost awareness and security best practices.</p>
-    </div>
-
-    <div class="card">
-      <h3>Containers & Orchestration</h3>
-      <p>Dockerized workloads and Kubernetes deployments on GKE and EKS.</p>
-    </div>
-
-    <div class="card">
-      <h3>CI/CD & Automation</h3>
-      <p>Jenkins and GitHub Actions pipelines with automated builds and releases.</p>
-    </div>
-
-    <div class="card">
-      <h3>Observability</h3>
-      <p>Prometheus, Grafana, CloudWatch, and alerting integrations.</p>
-    </div>
-
-    <div class="card">
-      <h3>Infrastructure as Code</h3>
-      <p>Terraform and Ansible for consistent, repeatable environments.</p>
-    </div>
-
-    <div class="card">
-      <h3>Linux & Scripting</h3>
-      <p>Bash and Python automation on Linux-based systems.</p>
-    </div>
-  </div>
-</section>
-
-<!-- ================= WORK ================= -->
-<section id="work" class="section dark reveal">
-  <h2>Selected Professional Work</h2>
-
-  <div class="grid">
-    <div class="accenture-card">
-      <h3>Kubernetes Production Platform</h3>
-      <p>
-        Designed and operated production Kubernetes clusters with ingress,
-        autoscaling, monitoring, and log aggregation.
-      </p>
-    </div>
-
-    <div class="accenture-card">
-      <h3>CI/CD Pipeline Optimization</h3>
-      <p>
-        Implemented CI/CD pipelines that reduced deployment time
-        and improved release reliability.
-      </p>
-    </div>
-
-    <div class="accenture-card">
-      <h3>Monitoring & Alerting Framework</h3>
-      <p>
-        Built observability solutions using Prometheus, Grafana,
-        and CloudWatch with proactive alerting.
-      </p>
-    </div>
-  </div>
-</section>
-
-<!-- ================= EXPERIENCE ================= -->
-<section id="experience" class="section reveal">
-  <h2>Professional Experience</h2>
-
-  <div class="timeline">
-    <div class="timeline-item">
-      <span>Feb 2022 – Present</span>
-      <h3>DevOps Engineer – Profit Apps India Pvt Ltd</h3>
-      <p>
-        Responsible for cloud infrastructure operations, CI/CD automation,
-        Kubernetes deployments, monitoring, and production support.
-        Improved deployment efficiency and system observability.
-      </p>
-    </div>
-  </div>
-</section>
-
-<!-- ================= CONTACT ================= -->
-<footer id="contact" class="footer reveal">
-  <h2>Contact Information</h2>
+<!-- FOOTER -->
+<footer id="contact" class="footer slide-up">
+  <h2>Contact</h2>
   <p>Email: georgeignatius6@gmail.com</p>
-  <p>GitHub: github.com/george-ignatius</p>
+  <p>GitHub: github.com/yourusername</p>
   <p>Blog: george-devops.blogspot.com</p>
 </footer>
 
