--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>George Ignatius | DevOps Engineer</title>
 
+  <!-- Corporate font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -26,10 +27,10 @@
   <div class="hero slide-left">
     <h1>DevOps Engineer</h1>
     <p>
-      Building reliable, scalable and secure cloud platforms
+      Designing, automating, and operating reliable cloud platforms
       across AWS and Google Cloud.
     </p>
-    <a href="#work" class="btn-primary">View Work</a>
+    <a href="#work" class="btn-primary">View Professional Work</a>
   </div>
 </header>
 
@@ -37,9 +38,9 @@
 <section id="overview" class="section slide-right">
   <h2>Professional Overview</h2>
   <p class="lead">
-    DevOps Engineer with strong experience in cloud infrastructure,
-    CI/CD automation, Kubernetes operations and monitoring systems
-    in production environments.
+    DevOps Engineer with hands-on experience in cloud infrastructure,
+    CI/CD automation, Kubernetes operations, and monitoring
+    for production environments.
   </p>
 </section>
 
@@ -48,33 +49,58 @@
   <h2>Areas of Expertise</h2>
 
   <div class="grid">
-    <div class="card">Cloud Platforms<br><span>AWS & GCP</span></div>
-    <div class="card">Containers<br><span>Docker & Kubernetes</span></div>
-    <div class="card">CI/CD<br><span>Jenkins & GitHub Actions</span></div>
-    <div class="card">Monitoring<br><span>Prometheus & Grafana</span></div>
-    <div class="card">IaC<br><span>Terraform & Ansible</span></div>
-    <div class="card">Linux & Scripting<br><span>Bash & Python</span></div>
+    <div class="card">
+      <h3>Cloud Platforms</h3>
+      <p>AWS and Google Cloud with cost and security awareness.</p>
+    </div>
+    <div class="card">
+      <h3>Containers & Kubernetes</h3>
+      <p>Dockerized applications deployed on GKE and EKS.</p>
+    </div>
+    <div class="card">
+      <h3>CI/CD Automation</h3>
+      <p>Jenkins and GitHub Actions for automated builds and releases.</p>
+    </div>
+    <div class="card">
+      <h3>Monitoring</h3>
+      <p>Prometheus, Grafana, CloudWatch and alerting systems.</p>
+    </div>
+    <div class="card">
+      <h3>Infrastructure as Code</h3>
+      <p>Terraform and Ansible for consistent environments.</p>
+    </div>
+    <div class="card">
+      <h3>Linux & Scripting</h3>
+      <p>Bash and Python automation on Linux servers.</p>
+    </div>
   </div>
 </section>
 
 <!-- WORK -->
-<section id="work" class="section dark slide-right">
+<section id="work" class="section slide-right">
   <h2>Selected Work</h2>
 
   <div class="grid">
-    <div class="accent-card">
+    <div class="card highlight">
       <h3>Kubernetes Production Platform</h3>
-      <p>GKE & EKS clusters with ingress, autoscaling and observability.</p>
+      <p>
+        Designed and managed Kubernetes clusters with ingress,
+        autoscaling, and observability.
+      </p>
     </div>
 
-    <div class="accent-card">
+    <div class="card highlight">
       <h3>CI/CD Pipeline Optimization</h3>
-      <p>Automated build and release pipelines reducing deployment time.</p>
+      <p>
+        Improved deployment speed and reliability using automated pipelines.
+      </p>
     </div>
 
-    <div class="accent-card">
+    <div class="card highlight">
       <h3>Monitoring & Alerting</h3>
-      <p>Centralized metrics, logs and alerts for production workloads.</p>
+      <p>
+        Implemented proactive monitoring and alerting for production systems.
+      </p>
     </div>
   </div>
 </section>
@@ -88,7 +114,7 @@
     <h3>DevOps Engineer – Profit Apps India Pvt Ltd</h3>
     <p>
       Managing cloud infrastructure, Kubernetes deployments,
-      CI/CD automation, monitoring and production support.
+      CI/CD automation, monitoring, and production operations.
     </p>
   </div>
 </section>
