--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,129 +3,84 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>George Ignatius | DevOps Engineer</title>
+  <title>George Ignatius – DevOps Engineer</title>
 
-  <!-- Corporate font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- HEADER -->
-<header class="header slide-down">
-  <nav class="nav">
-    <div class="logo">George Ignatius</div>
-    <ul class="nav-links">
-      <li><a href="#overview">Overview</a></li>
-      <li><a href="#expertise">Expertise</a></li>
-      <li><a href="#work">Work</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+<!-- Header / Introduction -->
+<section id="intro" class="section slide-up">
+  <h1>Hi, Myself</h1>
+  <h2>George Ignatius</h2>
+  <p>DevOps Engineer</p>
+  <a href="Resume.pdf" class="btn">Download Resume</a>
+</section>
 
-  <div class="hero slide-left">
-    <h1>DevOps Engineer</h1>
-    <p>
-      Designing, automating, and operating reliable cloud platforms
-      across AWS and Google Cloud.
-    </p>
-    <a href="#work" class="btn-primary">View Professional Work</a>
-  </div>
-</header>
-
-<!-- OVERVIEW -->
-<section id="overview" class="section slide-right">
-  <h2>Professional Overview</h2>
-  <p class="lead">
-    DevOps Engineer with hands-on experience in cloud infrastructure,
-    CI/CD automation, Kubernetes operations, and monitoring
-    for production environments.
+<!-- About -->
+<section id="about" class="section slide-up">
+  <h2>About Me</h2>
+  <p>
+    DevOps Engineer with experience in cloud infrastructure automation, scalable deployments, 
+    monitoring solutions, CI/CD pipelines, and production operations.
   </p>
 </section>
 
-<!-- EXPERTISE -->
-<section id="expertise" class="section slide-left">
-  <h2>Areas of Expertise</h2>
-
-  <div class="grid">
-    <div class="card">
-      <h3>Cloud Platforms</h3>
-      <p>AWS and Google Cloud with cost and security awareness.</p>
-    </div>
-    <div class="card">
-      <h3>Containers & Kubernetes</h3>
-      <p>Dockerized applications deployed on GKE and EKS.</p>
-    </div>
-    <div class="card">
-      <h3>CI/CD Automation</h3>
-      <p>Jenkins and GitHub Actions for automated builds and releases.</p>
-    </div>
-    <div class="card">
-      <h3>Monitoring</h3>
-      <p>Prometheus, Grafana, CloudWatch and alerting systems.</p>
-    </div>
-    <div class="card">
-      <h3>Infrastructure as Code</h3>
-      <p>Terraform and Ansible for consistent environments.</p>
-    </div>
-    <div class="card">
-      <h3>Linux & Scripting</h3>
-      <p>Bash and Python automation on Linux servers.</p>
-    </div>
-  </div>
+<!-- Skills -->
+<section id="skills" class="section slide-up">
+  <h2>Skills</h2>
+  <ul class="skills-list">
+    <li>AWS & GCP</li>
+    <li>Docker & Kubernetes</li>
+    <li>CI/CD (Jenkins, GitHub Actions)</li>
+    <li>Terraform & Ansible</li>
+    <li>Prometheus & Grafana</li>
+    <li>Bash & Python</li>
+  </ul>
 </section>
 
-<!-- WORK -->
-<section id="work" class="section slide-right">
-  <h2>Selected Work</h2>
-
-  <div class="grid">
-    <div class="card highlight">
-      <h3>Kubernetes Production Platform</h3>
-      <p>
-        Designed and managed Kubernetes clusters with ingress,
-        autoscaling, and observability.
-      </p>
-    </div>
-
-    <div class="card highlight">
-      <h3>CI/CD Pipeline Optimization</h3>
-      <p>
-        Improved deployment speed and reliability using automated pipelines.
-      </p>
-    </div>
-
-    <div class="card highlight">
-      <h3>Monitoring & Alerting</h3>
-      <p>
-        Implemented proactive monitoring and alerting for production systems.
-      </p>
-    </div>
-  </div>
-</section>
-
-<!-- EXPERIENCE -->
-<section id="experience" class="section slide-left">
-  <h2>Professional Experience</h2>
-
-  <div class="timeline">
+<!-- Experience -->
+<section id="experience" class="section slide-up">
+  <h2>Experience</h2>
+  <div class="experience-item">
+    <h3>DevOps Engineer</h3>
+    <p>Profit Apps India Pvt Ltd</p>
     <span>Feb 2022 – Present</span>
-    <h3>DevOps Engineer – Profit Apps India Pvt Ltd</h3>
-    <p>
-      Managing cloud infrastructure, Kubernetes deployments,
-      CI/CD automation, monitoring, and production operations.
-    </p>
+    <ul>
+      <li>Managed cloud deployments and infrastructure automation.</li>
+      <li>Implemented CI/CD pipelines with Jenkins and GitHub Actions.</li>
+      <li>Maintained monitoring using Prometheus, Grafana, and alerts.</li>
+    </ul>
   </div>
 </section>
 
-<!-- FOOTER -->
-<footer id="contact" class="footer slide-up">
-  <h2>Contact</h2>
+<!-- Projects / Work -->
+<section id="projects" class="section slide-up">
+  <h2>Projects / Work</h2>
+
+  <div class="project-item">
+    <h3>Kubernetes Production Setup</h3>
+    <p>GKE & EKS cluster deployments with ingress and robust monitoring.</p>
+  </div>
+
+  <div class="project-item">
+    <h3>CI/CD Pipeline Automation</h3>
+    <p>Automated build and deployment pipelines improving release speed and reliability.</p>
+  </div>
+
+  <div class="project-item">
+    <h3>Monitoring & Logs</h3>
+    <p>Consolidated metrics, dashboards, and alerting across environments.</p>
+  </div>
+</section>
+
+<!-- Contact -->
+<section id="contact" class="section slide-up">
+  <h2>Contact Me</h2>
   <p>Email: georgeignatius6@gmail.com</p>
-  <p>GitHub: github.com/yourusername</p>
-  <p>Blog: george-devops.blogspot.com</p>
-</footer>
+  <p>GitHub: github.com/george-ignatius</p>
+</section>
 
 </body>
 </html>
